@@ -1,4 +1,5 @@
 FROM openjdk:8-jdk-alpine
 ADD target/projetuc.jar projetuc.jar
 EXPOSE 9091
-ENTRYPOINT ["java","-jar","projetuc.jar"]
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap  -XX:MaxRAMFraction=1 -XshowSettings:vm "
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar projetuc.jar" ]
